# docs/swagger/swagger.json
@@ -179,16 +179,28 @@
         "api.Task": {
             "type": "object",
             "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
                 "description": {
+                    "type": "string"
+                },
+                "dueDate": {
                     "type": "string"
                 },
                 "id": {
                     "type": "string"
                 },
+                "priority": {
+                    "$ref": "#/definitions/core.Priority"
+                },
                 "status": {
-                    "type": "string"
+                    "$ref": "#/definitions/core.Status"
                 },
                 "title": {
+                    "type": "string"
+                },
+                "updatedAt": {
                     "type": "string"
                 }
             }
@@ -203,12 +215,38 @@
                     "type": "string"
                 },
                 "priority": {
-                    "type": "integer"
+                    "$ref": "#/definitions/core.Priority"
                 },
                 "title": {
                     "type": "string"
                 }
             }
+        },
+        "core.Priority": {
+            "type": "integer",
+            "enum": [
+                1,
+                2,
+                3
+            ],
+            "x-enum-varnames": [
+                "PriorityLow",
+                "PriorityMedium",
+                "PriorityHigh"
+            ]
+        },
+        "core.Status": {
+            "type": "string",
+            "enum": [
+                "NOT_STARTED",
+                "IN_PROGRESS",
+                "COMPLETED"
+            ],
+            "x-enum-varnames": [
+                "StatusNotStarted",
+                "StatusInProgress",
+                "StatusCompleted"
+            ]
         }
     }
 }
